Catalogus whitespaces fix

--- a/src/app/components/catalog/catalog.scss
+++ b/src/app/components/catalog/catalog.scss
@@ -67,6 +67,9 @@
     background-position: top;
   }
   .product-detail-description-container{
+    .product-detail-description{
+      white-space: pre;
+    }
     .product-detail-price{
       font-size: 30px;
       color: $color_secondary;
